<resources>
    <string name="app_name">InfoDota</string>
    <string name="winrate">WINRATE</string>
    <string name="wins">WINS</string>
    <string name="losses">LOSSES</string>
    <string name="solo_mmr">SOLO MMR</string>
    <string name="est_mmr">ESTIMATED MMR</string>
    <string name="radiant">Radiant</string>
    <string name="dire">Dire</string>
    <string name="duration">Duration</string>
    <string name="win">Win</string>
    <string name="loss">Loss</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_user_id_key">user_id</string>
    <string name="pref_user_id_def">76561198033764876</string>
    <string name="pref_user_wins_key">wins</string>
    <string name="pref_user_losses_key">losses</string>
    <string name="pref_user_solo_mmr_key">solo_mmr</string>
    <string name="pref_user_est_mmr_key">est_mmr</string>
    <string name="pref_user_zero_def">0</string>
    <string name="pref_user_pic_key">prof_pic</string>
    <string name="pref_user_name_key">user_name</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="load_more_matches">Load More Matches</string>

    <string name="menu_refresh">Refresh</string>
    <string name="menu_user_info">User Info</string>
    <string name="title_activity_match_details">Match</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="kda_label">KDA</string>

    <string name="intent_extra_match_id">match_id</string>

    <string name="match_details_player_label"><u>PLAYER</u></string>
    <string name="match_details_player_level"><u>LVL</u></string>
    <string name="match_details_player_kill"><u>K</u></string>
    <string name="match_details_player_death"><u>D</u></string>
    <string name="match_details_player_assist"><u>A</u></string>
    <string name="match_details_player_gpm"><u>GPM</u></string>
    <string name="match_details_player_xpm"><u>XPM</u></string>
    <string name="match_details_player_lh"><u>LH</u></string>
    <string name="match_details_player_dn"><u>DN</u></string>
    <string name="match_details_player_hd"><u>HD</u></string>
    <string name="match_details_player_hh"><u>HH</u></string>
    <string name="match_details_player_td"><u>TD</u></string>
    <string name="match_details_player_gold"><u>GOLD</u></string>
    <string name="match_details_player_items"><u>ITEMS</u></string>
    <string name="match_details_player_backpack"><u>BACKPACK</u></string>

    <string name="kills">Kills</string>
    <string name="deaths">Deaths</string>
    <string name="match_farm_radiant_unit">Radiant - Unit Kills</string>
    <string name="match_farm_dire_unit">Dire - Unit Kills</string>
    <string name="match_farm_heroes"><u>HEROES</u></string>
    <string name="match_farm_neutrals"><u>NEUTRALS</u></string>
    <string name="match_farm_creeps"><u>CREEPS</u></string>
    <string name="match_farm_ancients"><u>ANCIENTS</u></string>
    <string name="match_farm_towers"><u>TOWERS</u></string>
    <string name="match_farm_couriers"><u>COURIERS</u></string>
    <string name="match_farm_roshan"><u>ROSHAN</u></string>
    <string name="match_farm_observers"><u>OBSERVERS</u></string>
    <string name="match_farm_necronomicon"><u>NECRONOMICON</u></string>
    <string name="login">Login</string>

    <string name="radiant_adv">Radiant Advantage</string>
    <string name="gold">Gold</string>
    <string name="last_hits">Last Hits</string>

    <string name="info">InfoDota is an app to track statistics about DotA 2. It uses OpenDota API and does not track or store your information. To use InfoDota please enter your SteamID which you can find on your profile URL(https://steamcommunity.com/profiles/your-user-id)</string>

</resources>
