<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_match_graph_radiant_adv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiant_adv"
            android:textColor="@color/colorGreen"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/gv_match_radiand_adv"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_match_graph_radiant_adv" />

        <TextView
            android:id="@+id/tv_match_graph_player_golds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/gold"
            android:textColor="@color/colorGold"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gv_match_radiand_adv" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/gv_match_player_golds"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_match_graph_player_golds" />

        <TextView
            android:id="@+id/tv_match_graph_player_lh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/last_hits"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gv_match_player_golds" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/gv_match_player_lhs"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_match_graph_player_lh" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>