<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="115dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profileConstraint"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:background="@color/colorPrimaryDark"
    android:elevation="6dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/userProfilePicture"
        android:layout_width="70dp"
        android:layout_height="0dp"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorPrimaryLight"
        android:layout_marginLeft="8dp"
        android:paddingTop="12dp"
        android:paddingBottom="28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        />
    <TextView
        android:id="@+id/userNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BunC"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/userProfilePicture"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/userProfilePicture"
        app:layout_constraintBottom_toBottomOf="@+id/userProfilePicture"
        app:layout_constraintVertical_bias="0.39999998" />

    <TextView
        android:id="@+id/winrate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/winrate"
        android:textColor="@color/colorGrey"
        android:textSize="14sp"
        android:layout_marginRight="33dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/losses_label"
        android:layout_marginEnd="33dp" />
    <TextView
        android:id="@+id/winrate_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="56%"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/winrate_label"
        app:layout_constraintTop_toTopOf="@+id/losses_value" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wins_label"
        android:textColor="@color/colorGrey"
        android:text="@string/wins"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@+id/seperatorID"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/userProfilePicture" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wins_value"
        android:textColor="@color/colorGreen"
        android:text="303"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/wins_label"
        app:layout_constraintLeft_toLeftOf="@+id/wins_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/losses_label"
        android:textColor="@color/colorGrey"
        android:text="@string/losses"
        android:textSize="14sp"
        android:layout_marginStart="12dp"
        app:layout_constraintLeft_toRightOf="@+id/wins_label"
        android:layout_marginLeft="12dp"
        app:layout_constraintRight_toLeftOf="@+id/winrate_label"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="@+id/wins_label"
        android:layout_marginEnd="8dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/losses_value"
        android:textColor="@color/colorRed"
        android:text="322"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/losses_label"
        app:layout_constraintTop_toTopOf="@+id/wins_value" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/solo_mmr_label"
        android:text="@string/solo_mmr"
        android:textColor="@color/colorGrey"
        android:textSize="14sp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/wins_value"
        app:layout_constraintLeft_toLeftOf="@+id/wins_value" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/solo_mmr_value"
        android:text="2500"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/solo_mmr_label"
        app:layout_constraintTop_toBottomOf="@+id/solo_mmr_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/est_mmr_label"
        android:text="@string/est_mmr"
        android:textColor="@color/colorGrey"
        android:textSize="14sp"
        android:layout_marginStart="12dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/solo_mmr_label"
        android:layout_marginLeft="12dp"
        app:layout_constraintTop_toTopOf="@+id/solo_mmr_label"
        app:layout_constraintHorizontal_bias="0.1"
        android:layout_marginEnd="8dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/est_mmr_value"
        android:text="9000"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/est_mmr_label"
        app:layout_constraintTop_toBottomOf="@+id/est_mmr_label" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/colorGrey"
        android:id="@+id/seperatorID"
        app:layout_constraintTop_toTopOf="@+id/wins_label"
        app:layout_constraintLeft_toRightOf="@+id/userNameTV"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintBottom_toBottomOf="@+id/solo_mmr_value" />
</android.support.constraint.ConstraintLayout>