<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profileConstraint"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="@color/colorPrimaryMidDark"
    android:elevation="6dp"
    android:paddingBottom="8dp"
    app:layout_collapseMode="parallax"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/img_user_profile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:civ_border_color="@color/colorSecondary"
        app:civ_border_width="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="BunC"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_user_profile"
        app:layout_constraintLeft_toRightOf="@+id/img_user_profile"
        app:layout_constraintTop_toTopOf="@+id/img_user_profile" />

    <TextView
        android:id="@+id/tv_winrate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:text="@string/winrate"
        android:textColor="@color/colorGray"
        android:textSize="14sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_losses_label" />

    <TextView
        android:id="@+id/tv_winrate_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="56%"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_winrate_label"
        app:layout_constraintTop_toTopOf="@+id/tv_losses_value" />

    <TextView
        android:id="@+id/tv_wins_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/wins"
        android:textColor="@color/colorGray"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@+id/div_user_info"
        app:layout_constraintTop_toTopOf="@+id/img_user_profile" />

    <TextView
        android:id="@+id/tv_wins_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="303"
        android:textColor="@color/colorGreen"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_wins_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_wins_label" />

    <TextView
        android:id="@+id/tv_losses_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="12dp"
        android:text="@string/losses"
        android:textColor="@color/colorGray"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@+id/tv_wins_label"
        app:layout_constraintRight_toLeftOf="@+id/tv_winrate_label"
        app:layout_constraintTop_toTopOf="@+id/tv_wins_label" />

    <TextView
        android:id="@+id/tv_losses_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="322"
        android:textColor="@color/colorRed"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_losses_label"
        app:layout_constraintTop_toTopOf="@+id/tv_wins_value" />

    <View
        android:id="@+id/div_user_info"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorDivider"
        app:layout_constraintLeft_toRightOf="@+id/tv_user_name"
        app:layout_constraintTop_toTopOf="@+id/tv_wins_label" />
</android.support.constraint.ConstraintLayout>